# pydocs-cloud

./: .gitignore  CLAUDE.md  LICENSE  README.md  install.sh
.github/workflows/: deploy.yml  setup-branch-protection.yml
api/: Dockerfile  Makefile  cloudbuild.yaml  docker-compose.dev.yaml  justfile  pyproject.toml  service.yaml
api/src/: api.py  main.py  mcp_server.py  settings.py
api/src/db/: models.py  operations.py
api/src/routes/: health.py
api/src/routes/v1/: __init__.py
api/src/routes/v1/api_calls/: repository.py  schema.py  service.py
api/src/routes/v1/apikeys/: repository.py  router.py  schema.py  service.py
api/src/routes/v1/auth/: router.py  schema.py
api/src/routes/v1/commit_cache/: repository.py  schema.py  service.py
api/src/routes/v1/feedback/: repository.py  schema.py  service.py
api/src/routes/v1/kv_store/: repository.py  schema.py  service.py
api/src/routes/v1/lookup/: router.py  schema.py
api/src/routes/v1/npm_sync/: operations.py  router.py
api/src/routes/v1/releases/: repository.py  router.py  schema.py  service.py
api/src/routes/v1/users/: repository.py  router.py  schema.py  service.py
api/src/routes/v1/webhooks/: router.py  schema.py
api/src/utils/: app_lifespan.py  auth.py  embeddings.py  github_commits.py  github_extraction.py  github_readme.py  github_source.py  google_bucket.py  logger.py  npm_sync.py  npm_sync_clean.py  pypi.py  registry_source.py  service_tag.py  websocket.py
api/tests/: conftest.py
api/tests/integration/: test_endpoints.py
api/tests/unit/: test_api_keys.py  test_queries.py  test_user_auth.py
cloud_run/pydocs-auto-split-csv/: Makefile  main.py
cloud_run/split-big-query-csv/: Makefile  main.py
embed/: cloudbuild.yaml  dockerfile  embeddings.py  justfile  main.py  requirements.txt
functions/enqueue-chunk/: main.py
functions/npm-sync/: main.py  requirements.txt
functions/split-and-enqueue/: main.py  requirements.txt
functions/split-and-upload/: main.py
functions/split-csv/: .gitignore  Makefile  main.py
landing/: Dockerfile  cloudbuild.yaml  justfile  package-lock.json  package.json  tailwind.config.ts
landing/app/: globals.css  layout.tsx  page.tsx
landing/public/: install.sh
queries/: pypi_export.sql  pypi_incremental_export.sql
terraform/: README.md  main.tf  variables.tf
terraform/bigquery/: main.tf  outputs.tf  variables.tf
terraform/cloud_functions/: enqueue_chunk.tf  main.tf  npm_sync.tf  outputs.tf  shared.tf  split_and_enqueue.tf  split_and_upload.tf  split_csv.tf  variables.tf
terraform/cloud_run/: artifact_registry.tf  cloudbuild.tf  embed_service.tf  landing.tf  load_balancer.tf  mcp_api.tf  npm_sync_api.tf  outputs.tf  releases_api.tf  user_api.tf  variables.tf
terraform/cloud_sql/: main.tf  outputs.tf  variables.tf
terraform/cloud_tasks/: main.tf  outputs.tf  variables.tf
terraform/compute/: main.tf  nfs.tf
terraform/secrets/: main.tf  variables.tf
terraform/storage/: main.tf  outputs.tf  variables.tf
(+3 files in other folders)
